--- a/mod/forum/styles.css
+++ b/mod/forum/styles.css
@@ -63,6 +63,7 @@
 .path-mod-forum .forumheaderlist th.header.replies .iconsmall { margin: 0 .3em;}
 .path-mod-forum .forumheaderlist .picture {width: 35px;}
 .path-mod-forum .forumheaderlist .discussion .starter {vertical-align: middle;}
+.path-mod-forum .forumheaderlist .discussion .pinned img {padding: 5px;}
 .path-mod-forum .forumheaderlist .discussion .lastpost {white-space: nowrap;text-align: right;}
 .path-mod-forum .forumheaderlist .replies,
 .path-mod-forum .forumheaderlist .discussion .author {white-space: nowrap;}
@@ -81,12 +82,12 @@
 
 /** Styles for discuss.php **/
 #page-mod-forum-discuss .discussioncontrols {width:100%;margin:5px;}
-#page-mod-forum-discuss .discussioncontrols .discussioncontrol {width:33%;float:left;}
+#page-mod-forum-discuss .discussioncontrols .controlscontainer {width:100%;float:right;}
+#page-mod-forum-discuss .discussioncontrols .discussioncontrol {float:left;}
 #page-mod-forum-discuss .discussioncontrol.exporttoportfolio {text-align:left;}
-#page-mod-forum-discuss .discussioncontrol.displaymode {text-align:center;}
-#page-mod-forum-discuss .discussioncontrol.movediscussion {float:right;width:auto;text-align:right;padding-right:10px;}
+#page-mod-forum-discuss .discussioncontrol.displaymode {padding-right:10px;}
+#page-mod-forum-discuss .discussioncontrol.movediscussion {padding-right:10px;}
 #page-mod-forum-discuss .discussioncontrol.movediscussion .movediscussionoption {}
-#page-mod-forum-discuss .discussioncontrol.pindiscussion {float:right;width:auto;text-align:right;padding-right:10px;}
 
 /** Styles for view.php **/
 #page-mod-forum-view .forumaddnew {margin-bottom: 20px;}
